<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="ensf409.androidcalculator.MainActivity"
    android:id="@+id/relative1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="Enter numbers. Press clear to restart"
        android:id="@+id/txt1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        android:id="@+id/edt1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btn1"
        android:id="@+id/button1"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/edt1"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btn2"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button1"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btn3"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btn4"
        android:id="@+id/button4"
        android:layout_below="@+id/button1"
        android:layout_toStartOf="@id/button2"
        android:layout_toLeftOf="@+id/button2"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btn5"
        android:id="@+id/button5"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btn6"
        android:id="@+id/button6"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btn7"
        android:id="@+id/button7"
        android:layout_below="@+id/button4"
        android:layout_toStartOf="@id/button2"
        android:layout_toLeftOf="@+id/button2"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btn8"
        android:id="@+id/button8"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@id/button5"
        android:layout_alignStart="@+id/button5"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btn9"
        android:id="@+id/button9"
        android:layout_below="@id/button6"
        android:layout_alignLeft="@id/button6"
        android:layout_alignStart="@id/button6"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btnDot"
        android:id="@+id/buttonDot"
        android:layout_below="@id/button7"
        android:layout_toLeftOf="@id/button2"
        android:layout_toStartOf="@id/button2"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btn0"
        android:id="@+id/button0"
        android:layout_below="@id/button8"
        android:layout_alignLeft="@id/button8"
        android:layout_alignStart="@id/button8"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btnClear"
        android:id="@+id/buttonClear"
        android:layout_below="@id/button9"
        android:layout_alignLeft="@id/button9"
        android:layout_alignStart="@id/button9"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btnAdd"
        android:id="@+id/buttonAdd"
        android:layout_alignTop="@id/button3"
        android:layout_toRightOf="@id/button3"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_alignRight="@+id/edt1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btnSub"
        android:id="@+id/buttonSub"
        android:layout_below="@id/buttonAdd"
        android:layout_alignLeft="@id/buttonAdd"
        android:layout_alignRight="@id/buttonAdd"
        android:layout_alignStart="@id/buttonAdd"
        android:layout_alignEnd="@id/buttonAdd"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btnMul"
        android:id="@+id/buttonMult"
        android:layout_below="@id/buttonSub"
        android:layout_alignLeft="@id/buttonSub"
        android:layout_alignRight="@id/buttonSub"
        android:layout_alignStart="@id/buttonSub"
        android:layout_alignEnd="@id/buttonSub"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btnDiv"
        android:id="@+id/buttonDiv"
        android:layout_below="@id/buttonMult"
        android:layout_alignLeft="@id/buttonMult"
        android:layout_alignRight="@id/buttonMult"
        android:layout_alignStart="@id/buttonMult"
        android:layout_alignEnd="@id/buttonMult"/>

    <Button
        android:layout_width="@dimen/button_equal_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btnEqual"
        android:id="@+id/buttonEqual"
        android:layout_below="@id/button0"
        android:layout_alignRight="@id/buttonDiv"
        android:layout_alignEnd="@id/buttonDiv"
        android:layout_alignLeft="@id/button0"
        android:layout_alignStart="@id/button0"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/dialPad_text_size"
        android:text="@string/btnNeg"
        android:id="@+id/buttonNeg"
        android:layout_below="@id/buttonDot"
        android:layout_toLeftOf="@id/button2"
        android:layout_toStartOf="@id/button2"/>

</RelativeLayout>